"added new functionalities changes"